<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="language_type">en</string>
    <string name="app_name" translatable="false">Onlife</string>
    <string name="gcm_server_id" translatable="false">AIzaSyBMo260wxpPNsCHle_ynoMUx4sju9W76LY</string>

    <string name="blocking">Locking</string>
    <string name="group">Group</string>

	<string name="loading_friends">Loading friends</string>
    <string name="uploading_friends">Uploading friends</string>
    <string name="getting_images">Getting Friends\' Images</string>
    <string name="dialog_please_wait">Please Wait…</string>
    <string name="dialog_loading">Loading</string>

    <string name="dialog_title_creating_group">Creating Group</string>
    <string name="group_name">Change Group\'s Name…</string>
    <string name="group_already">Group already created!</string>
	
    <string name="device_admin">Lockscreen Onlife Authorization</string>
    <string name="device_admin_description">This allow your phone to be locked</string>
    <string name="facebook_app_id" translatable="false">1690720374494757</string>"
    
    <string name="login_facebook">Login with Facebook</string>
    <string name="action_logout">Logout</string>

    <string name="notification_someone_block_you">Someone Locked You!</string>

    <string name="action_settings">Settings</string>
    <string name="settings_options">Options</string>
    <string name="settings_option_select_friends">Select Friends</string>
    <string name="action_invite_friends">Invite Friends</string>

    <string name="tab_contacts">Contacts</string>
    <string name="button_search_friend">Search Friend</string>
    <string name="search_contact_bar">Search in contacts…</string>
    <string name="tab_groups">Groups</string>

    <string name="title_activity_information">Information</string>
    <string name="friends_in_group">Friends in Group</string>

    <string name="title_activity_new_group">New Group</string>
    <string name="button_add_group">Add Group</string>
    <string name="photo_select_image">Select image</string>
    <string name="photo_option_camera">From camera</string>
    <string name="photo_option_sd">From SD card</string>
    <string name="pick_image">Pick image</string>
    <string name="not_supported_image_crop">Whoops - your device does not support the crop action!</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="really_delete">Are you sure?</string>
    <string name="refresh_contact">Refresh contacts</string>

    <string name="send_a_message_bar">Send a message…</string>
    <string name="max_characters_text" translatable="false">0/70</string>
    <string name="message_max_characters">Only 70 characters please</string>
    <string name="button_change_text_message">Change Text</string>
    <string name="button_block">Lock!</string>
    <string name="friend_inactive">Inactive Friend</string>

    <string name="no_connection">No connection.</string>
    <string name="no_connection_connect">Please connect to continue</string>
    <string name="no_server">Server not available.</string>
    <string name="error">There was an error. Try again</string>
    <string name="button_change_connection">Change Connection</string>
    <string name="button_group_change_name">Change group name!</string>
    <string name="toast_contacts_refreshed">Contacts Refreshed!</string>
    <string name="toast_wait_until_contacts_refreshed">Wait! reloading Contacts…</string>
    <string name="toast_group_not_yet_created">Name or Contacts not specified. Try Again.</string>
    <string name="toast_group_only_less_than_five_friends">Max five friends</string>
    <string name="toast_not_time_yet">Wait! Remaining Time</string>

    <string name="select_friend">Select Friends</string>
    <string name="settings_option_uninstall">Uninstall App</string>

    <string name="slide">Slide to begin…</string>
    <string name="welcome">Welcome!</string>
    <string name="onboarding1_message">Lock your friends\' screen, and see how they react!</string>
    <string name="onboarding2_message">Check when they\'re watching it…</string>
    <string name="onboarding2_viewing">viewing</string>
    <string name="onboarding2_locked">locked</string>
    <string name="onboarding2_image">onboarding 1</string>
    <string name="onboarding3_message">And lock them with a funny message!</string>
    <string name="onboarding3_image">onboarding 2</string>
    <string name="onboarding4_message">Long press for quick lock</string>
    <string name="onboarding4_image">onboarding 3</string>
    <string name="onboarding5_message">Create groups to lock many friends at once!</string>
    <string name="onboarding5_image">onboarding 4</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="done">DONE</string>
    <string name="privacy_policy_url">https://www.iubenda.com/privacy-policy/405416</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="logo_image">Logo image</string>
    <string name="logo_text">Logo text</string>
    <string name="device_admin_not_activated">Device Administrator not activated.</string>
    <string name="app_link_url" translatable="false">https://fb.me/1707393996160728</string>
    <string name="app_link_image_url" translatable="false">http://www.onlife-app.com/myapplink/logo.png</string>
    <string name="friends_blocked_number">Friends Blocked:</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="playservices_not_installed">Google Play Services not supported. Please install and configure Google Play Store.</string>
    <string name="gcm_not_registered">Friend not registered</string>
    <string name="update_available">There\'s a new update</string>
    <string name="update_forced">Please update to continue</string>
    <string name="update_optional">Wanna update it?</string>
    <string name="update_playservices">Google Play Services not updated</string>
    <string name="notification_has_blocked">has blocked you.</string>
    <string name="see_tutorial" translatable="false">Tutorial</string>
    <string name="see_privacy_policy">Privacy Policy</string>
    <string name="settings_select_contacts">Select friends</string>
    <string name="rate_title">Rate Onlife!</string>
    <string name="rate_explanation">Do you like Onlife? Please take a moment to rate us on the Play Store.</string>
    <string name="rate_now">Rate now</string>
    <string name="rate_later">Maybe later</string>
    <string name="rate_never">Never</string>

</resources>