<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:icon="@drawable/ic_more_vert_black_24dp">
    <item
        android:id="@+id/searchContact"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always"
        android:title="@string/button_search_friend"/>
    <item
        android:id="@+id/addGroup"
        android:icon="@drawable/ic_group_add_black_24dp"
        app:showAsAction="always"
        android:title="@string/title_activity_new_group"/>
    <item android:id="@+id/MenuHome_InviteFriends"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:onClick="inviteFriends"
        android:title="@string/action_invite_friends"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:onClick="settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:title="@string/action_logout"
        android:onClick="logout"
        app:showAsAction="never"/>
</menu>
