<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="20dp"
    android:paddingLeft="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="60dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/onboarding2_message"
            android:maxLines="1"/>

        <ImageView
            android:contentDescription="@string/onboarding2_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/tutorial_1"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

                <TextView
                    android:id="@+id/watching"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_visibility_on"
                    android:drawableStart="@drawable/ic_action_visibility_on"
                    android:text="@string/onboarding2_viewing"
                    android:gravity="center"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onboarding2_locked"
                    android:layout_below="@+id/watching"
                    android:drawableLeft="@drawable/ic_action_visibility_off"
                    android:drawableStart="@drawable/ic_action_visibility_off"
                    android:textSize="20sp"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>